--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
         margin: 0px;
         background-color: #fff;
         overflow: hidden;
+        width: 1440px;
+        height: 1440px;
+      }
+      #container {
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
   <body>
     <script src="/bower_components/three.js/build/three.min.js"></script>
     <script src="orbit.js"></script>
-    <script src="index.js"></script>
-    <div>Hello</div>
+    <script src="/build/main.bundle.js"></script>
+    <div id="container">Hello</div>
   </body>
 </html>
